# VSKIPEX

./: .gitignore  CMakeLists.txt  compile.sh
shaders/: simple_shader.vert
src/: FirstApp.cpp  FirstApp.hpp  LvePipeline.cpp  LvePipeline.hpp  LveWindow.cpp  LveWindow.hpp  lve_window.cpp  main.cpp
